--- a/Services/Cats.Services.Hub/Cats.Services.Hub.csproj
+++ b/Services/Cats.Services.Hub/Cats.Services.Hub.csproj
@@ -60,8 +60,6 @@
     <Compile Include="AdjustmentService.cs" />
     <Compile Include="AdminUnitService.cs" />
     <Compile Include="AuditSevice.cs" />
-    <Compile Include="HubBusinessProcessService.cs" />
-    <Compile Include="HubBusinessProcessStateService.cs" />
     <Compile Include="CommodityGradeService.cs" />
     <Compile Include="CommodityService.cs" />
     <Compile Include="CommoditySourceService.cs" />
@@ -76,17 +74,12 @@
     <Compile Include="DonorService.cs" />
     <Compile Include="ErrorLogService.cs" />
     <Compile Include="FDPService.cs" />
-    <Compile Include="HubFlowTemplateService.cs" />
     <Compile Include="ForgetPasswordRequestService.cs" />
     <Compile Include="GiftCertificateDetailService.cs" />
     <Compile Include="GiftCertificateService.cs" />
     <Compile Include="HubOwnerService.cs" />
-    <Compile Include="HubService.cs" />
     <Compile Include="HubSettingService.cs" />
     <Compile Include="HubSettingValueService.cs" />
-    <Compile Include="IHubBusinessProcessService.cs" />
-    <Compile Include="IHubBusinessProcessStateService.cs" />
-    <Compile Include="IHubFlowTemplateService.cs" />
     <Compile Include="Interfaces\IAccountService.cs" />
     <Compile Include="Interfaces\IAdjustmentReasonService.cs" />
     <Compile Include="Interfaces\IAdjustmentService.cs" />
@@ -109,7 +102,6 @@
     <Compile Include="Interfaces\IGiftCertificateDetailService.cs" />
     <Compile Include="Interfaces\IGiftCertificateService.cs" />
     <Compile Include="Interfaces\IHubOwnerService.cs" />
-    <Compile Include="Interfaces\IHubService.cs" />
     <Compile Include="Interfaces\IHubSettingService.cs" />
     <Compile Include="Interfaces\IHubSettingValueService.cs" />
     <Compile Include="Interfaces\IInternalMovementService.cs" />
@@ -145,8 +137,6 @@
     <Compile Include="Interfaces\IUserHubService.cs" />
     <Compile Include="Interfaces\IUserProfileService.cs" />
     <Compile Include="Interfaces\IUserRoleService.cs" />
-    <Compile Include="IHubProcessTemplateService.cs" />
-    <Compile Include="IHubStateTemplateService.cs" />
     <Compile Include="IVWDdispatchAllocationDistributionService.cs" />
     <Compile Include="IVWReceiptAllocationAggregateService.cs" />
     <Compile Include="LedgerService.cs" />
@@ -156,7 +146,6 @@
     <Compile Include="OtherDispatchAllocationService.cs" />
     <Compile Include="PartitionService.cs" />
     <Compile Include="PeriodService.cs" />
-    <Compile Include="HubProcessTemplateService.cs" />
     <Compile Include="ProgramService.cs" />
     <Compile Include="ProjectCodeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -172,7 +161,6 @@
     <Compile Include="SMSService.cs" />
     <Compile Include="StackEventService.cs" />
     <Compile Include="StackEventTypeService.cs" />
-    <Compile Include="HubStateTemplateService.cs" />
     <Compile Include="StockStatusService.cs" />
     <Compile Include="StoreService.cs" />
     <Compile Include="TransactionGroupService.cs" />
@@ -222,6 +210,10 @@
     <ProjectReference Include="..\Cats.Services.Security\Cats.Services.Security.csproj">
       <Project>{0E706780-A5B2-488C-A502-49526946DEB5}</Project>
       <Name>Cats.Services.Security</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cats.Services.Workflow\Cats.Services.Workflow.csproj">
+      <Project>{91b6c6b9-eec7-4436-a24b-5bc33cae1beb}</Project>
+      <Name>Cats.Services.Workflow</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
