Fix CATS-1406 [UI]:- Change Woreda Stock Distribution page theme to the new theme

--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -919,6 +919,7 @@
     <Content Include="Areas\Logistics\Views\DispatchAllocation\AllocationAdjustment.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\ReliefRequisition\PromotThese.cshtml" />
     <Content Include="Areas\Logistics\Views\DispatchAllocation\UpdateRequisition.cshtml" />
+    <Content Include="Areas\EarlyWarning\Views\Request\Allocation_old.cshtml" />
     <None Include="Areas\Logistics\Views\DispatchAllocation\_AllocateProjectCode.cshtml" />
     <Content Include="Content\2013.1.219\Black\editor.png" />
     <Content Include="Content\2013.1.219\Black\imagebrowser.png" />
