CATS-1396: Workflow implementation for Delivery in Logistics

--- a/Services/Cats.Services.Common/App.config
+++ b/Services/Cats.Services.Common/App.config
@@ -79,6 +79,9 @@
             <setting name="DispatchWorkflow" serializeAs="String">
                 <value>DispatchWorkflow</value>
             </setting>
+            <setting name="DeliveryWorkflow" serializeAs="String">
+                <value>DeliveryWorkflow</value>
+            </setting>
         </Cats.Services.Common.ApplicationSettings>
     </applicationSettings>
 </configuration>
