--- a/Services/Cats.Services.EarlyWarning/Cats.Services.EarlyWarning.csproj
+++ b/Services/Cats.Services.EarlyWarning/Cats.Services.EarlyWarning.csproj
@@ -159,6 +159,10 @@
       <Project>{7cf78855-5a90-441f-9acc-fafbd1cad68a}</Project>
       <Name>Cats.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Models\Cats.Models.Hub\Cats.Models.Hub.csproj">
+      <Project>{1467c728-3071-4798-997c-61314b26ef2e}</Project>
+      <Name>Cats.Models.Hub</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Models\Cats.Models.Security\Cats.Models.Security.csproj">
       <Project>{E3C4D9FC-AD84-4E19-A475-6ADBD134AF68}</Project>
       <Name>Cats.Models.Security</Name>
