--- a/Services/Cats.Services.Workflow/Cats.Services.Workflow.csproj
+++ b/Services/Cats.Services.Workflow/Cats.Services.Workflow.csproj
@@ -61,6 +61,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Config\DashboardMapping.cs" />
     <Compile Include="Enum\WorkflowState.cs" />
     <Compile Include="Implementation\FlowTemplateService.cs" />
     <Compile Include="Implementation\Hub\HubBusinessProcessService.cs" />
