--- a/Data/Cats.Data.Shared/Cats.Data.Shared.csproj
+++ b/Data/Cats.Data.Shared/Cats.Data.Shared.csproj
@@ -60,6 +60,12 @@
     <Compile Include="UnitWork\IUnitOfWork.cs" />
     <Compile Include="UnitWork\UnitOfWork.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Models\Cats.Models.Shared\Cats.Models.Shared.csproj">
+      <Project>{647f8dad-7d70-4419-a87c-1802db94190b}</Project>
+      <Name>Cats.Models.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
