--- a/Web/Web.config
+++ b/Web/Web.config
@@ -94,10 +94,10 @@
 
 
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
 
 
