--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -1948,6 +1948,10 @@
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Bootstrap\awesome-bootstrap-checkbox.css" />
+    <Content Include="Scripts\Bootstrap\bootstrap-multiselect.css" />
+    <Content Include="Scripts\Bootstrap\bootstrap-multiselect.js" />
+    <Content Include="Scripts\Bootstrap\font-awesome.min.css" />
     <Content Include="Scripts\cats-print-script.js" />
     <Content Include="Scripts\css\bootstrap.min.css" />
     <Content Include="Scripts\css\Bootstrap\loading-image.gif" />
@@ -2794,6 +2798,7 @@
     <Content Include="Scripts\fonts\FontAwesome.otf" />
     <Content Include="Scripts\css\images\KendoUI.ttf" />
     <Content Include="Scripts\css\images\KendoUI.woff" />
+    <Content Include="Scripts\fonts\fontawesome-webfont.woff2" />
     <None Include="Scripts\HubScripts\jquery-1.7.1-vsdoc.js" />
     <Content Include="Scripts\HubScripts\jquery-1.7.1.js" />
     <Content Include="Scripts\HubScripts\jquery-1.7.1.min.js" />
@@ -3498,6 +3503,7 @@
     <Content Include="Web References\ReportPortal\CacheRefreshPlan1.datasource" />
     <Content Include="Web References\ReportPortal\CacheRefreshPlan3.datasource" />
     <Content Include="Web References\ReportPortal\CacheRefreshPlan4.datasource" />
+    <Content Include="Views\Shared\Dashboard\DataActivityIndicator.cshtml" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
