--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -540,8 +540,9 @@
     <Compile Include="Areas\WorkflowManager\Controllers\FlowTemplateController.cs" />
     <Compile Include="Areas\WorkflowManager\Controllers\ProcessTemplateController.cs" />
     <Compile Include="Areas\WorkflowManager\Controllers\StateTemplateController.cs" />
+    <Compile Include="Areas\WorkflowManager\Models\DashboarDataEntryModel.cs" />
     <Compile Include="Areas\WorkflowManager\Models\WorkflowActivityViewModel.cs" />
-    <Compile Include="Areas\WorkflowManager\Controllers\WorkflowManager.cs" />
+    <Compile Include="Areas\WorkflowManager\Controllers\WorkflowManagerController.cs" />
     <Compile Include="Areas\WorkflowManager\Controllers\WorkflowManagerAreaRegistration.cs" />
     <Compile Include="CatsMasterDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -2758,6 +2759,7 @@
     <Content Include="Areas\Settings\Views\Users\ForgetPassword.cshtml" />
     <Content Include="Areas\Settings\Views\Users\ForgetPasswordRequest.cshtml" />
     <Content Include="Areas\WorkflowManager\Views\BusinessProcess\Details.cshtml" />
+    <Content Include="Areas\WorkflowManager\Views\WorkflowManager\Index.cshtml" />
     <None Include="dataset.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>dataset.Designer.cs</LastGenOutput>
