Fix for login problem

--- a/Services/Cats.Services.EarlyWarning/Cats.Services.EarlyWarning.csproj
+++ b/Services/Cats.Services.EarlyWarning/Cats.Services.EarlyWarning.csproj
@@ -80,6 +80,8 @@
     <Compile Include="AdminUnitTypeService.cs" />
     <Compile Include="AllocationByRegionService.cs" />
     <Compile Include="HRDService.cs" />
+    <Compile Include="HubService.cs" />
+    <Compile Include="IHubService.cs" />
     <Compile Include="IReasonService.cs" />
     <Compile Include="ReasonService.cs" />
     <Compile Include="CommodityService.cs" />
