--- a/Web/Web.config
+++ b/Web/Web.config
@@ -92,26 +92,10 @@
 
   <connectionStrings>
 
-    <!--<add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-
-  
-    <add name="elmah-sql" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    
-   <!--<add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />-->
-    
-    <!--<add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />-->
+    <add name="elmah-sql" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
  
