--- a/Hub.Tests/Hub.Tests.csproj
+++ b/Hub.Tests/Hub.Tests.csproj
@@ -123,6 +123,10 @@
       <Project>{9fba0283-ee84-49f2-8305-f038bbf29658}</Project>
       <Name>Cats.Services.Hub</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Services\Cats.Services.Workflow\Cats.Services.Workflow.csproj">
+      <Project>{91b6c6b9-eec7-4436-a24b-5bc33cae1beb}</Project>
+      <Name>Cats.Services.Workflow</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Web\Cats.csproj">
       <Project>{f8991e39-b399-4baf-8515-f62b28a604be}</Project>
       <Name>Cats</Name>
