--- a/Tests/Cats.Tests/Cats.Tests.csproj
+++ b/Tests/Cats.Tests/Cats.Tests.csproj
@@ -227,6 +227,10 @@
       <Project>{a08cf415-6299-41ab-9d69-c3ce9b49ccd6}</Project>
       <Name>Cats.Services.EarlyWarning</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Services\Cats.Services.Workflow\Cats.Services.Workflow.csproj">
+      <Project>{91b6c6b9-eec7-4436-a24b-5bc33cae1beb}</Project>
+      <Name>Cats.Services.Workflow</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Web\Cats.csproj">
       <Project>{f8991e39-b399-4baf-8515-f62b28a604be}</Project>
       <Name>Cats</Name>
