fix build fails

--- a/Hub.Tests/Hub.Tests.csproj
+++ b/Hub.Tests/Hub.Tests.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7542A70B-9C3E-4510-A9F3-EB9ED47CC322}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Hub.Tests</RootNamespace>
     <AssemblyName>Hub.Tests</AssemblyName>
