--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -1565,6 +1565,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Dashboard\dashboardcomponents.css" />
+    <Content Include="Content\Icons\loading-x.gif" />
+    <Content Include="Content\Icons\Search Icon.png" />
+    <Content Include="Content\Icons\search.gif" />
+    <Content Include="Content\Icons\SearchFiles.png" />
     <Content Include="Content\images\CATS.png" />
     <Content Include="Content\images\CatsLogo.ico" />
     <Content Include="Content\images\CATS_Blue.ico" />
@@ -2196,7 +2200,6 @@
     <Content Include="Scripts\js\bootstrap-timepicker.min.js" />
     <Content Include="Scripts\js\bootstrap.calendars.picker.css" />
     <Content Include="Scripts\js\bootstrap.min.js" />
-    
     <Content Include="Scripts\js\kendo.all.min.js" />
     <Content Include="Scripts\kendo\2013.1.319\cultures\kendo.culture.af-ZA.min.js" />
     <Content Include="Scripts\kendo\2013.1.319\cultures\kendo.culture.af.min.js" />
