--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -1566,9 +1566,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Dashboard\dashboardcomponents.css" />
     <Content Include="Content\Icons\loading-x.gif" />
+    <Content Include="Content\Icons\loading.gif" />
     <Content Include="Content\Icons\Search Icon.png" />
     <Content Include="Content\Icons\search.gif" />
-    <Content Include="Content\Icons\SearchFiles.png" />
     <Content Include="Content\images\CATS.png" />
     <Content Include="Content\images\CatsLogo.ico" />
     <Content Include="Content\images\CATS_Blue.ico" />
