--- a/Web/Web.config
+++ b/Web/Web.config
@@ -87,20 +87,16 @@
     </appender>
   </log4net>
 
-
-
-
   <connectionStrings>
+  <add name="elmah-sql" connectionString="Data Source=.\Mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\Mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\Mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\Mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
-    <!--<add name="elmah-sql" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-1;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
 
   </connectionStrings>
  
