--- a/Web/Web.config
+++ b/Web/Web.config
@@ -91,10 +91,10 @@
   <connectionStrings>
 
 
-    <add name="elmah-sql" connectionString="Data Source=.\sqlserver;Initial Catalog=Cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.\sqlserver;Initial Catalog=Cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.\sqlserver;Initial Catalog=Cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.\sqlserver;Initial Catalog=Cats;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
 
