--- a/Web/Web.config
+++ b/Web/Web.config
@@ -92,10 +92,10 @@
 
 
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=Cats-v-1-3-2;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=Cats-v-1-3-2;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=Cats-v-1-3-2;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=Cats-v-1-3-2;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\mssql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
 
   </connectionStrings>
