--- a/Lookups/Cats.RestAPI.csproj
+++ b/Lookups/Cats.RestAPI.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AdminUnit.cs" />
     <Compile Include="Models\Commodity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
